Add svc discoverer for readreplica svc
